--- a/latex-template-xelatex.tex
+++ b/latex-template-xelatex.tex
@@ -1,14 +1,14 @@
-\documentclass[10pt,letterpaper]{article} 
+\documentclass[10pt,letterpaper,twoside]{article} 
 
 \usepackage{indentfirst}
 \usepackage[colorlinks,linkcolor=black]{hyperref}
 
 \usepackage{fontspec}
-\setmainfont{FZShuSong-Z01}
+\setmainfont{FZNewShuSong-Z10}
 % \setmainfont{NSimSun}
 
-\XeTeXlinebreaklocale "zh"
-\XeTeXlinebreakskip = 0pt plus 1pt
+\XeTeXlinebreaklocale "zh-CN"
+\XeTeXlinebreakskip = 0pt plus 0.5pt
 
 \linespread{1.2}
 
@@ -20,6 +20,15 @@
     子曰：“学而时习之，不亦悦乎？有朋自远方来，不亦乐乎？人不知而不愠，不亦君子乎？”
 
     有子曰：“其为人也孝悌而好犯上者，鲜矣。不好犯上而好作乱者，未之有也。君子务本，本立而道生。孝悌也者，其为仁之本与？”
+
+
+\fontspec{FZShuSong-Z01}
+\section{方正书宋}
+
+    子曰：“学而时习之，不亦悦乎？有朋自远方来，不亦乐乎？人不知而不愠，不亦君子乎？”
+
+    有子曰：“其为人也孝悌而好犯上者，鲜矣。不好犯上而好作乱者，未之有也。君子务本，本立而道生。孝悌也者，其为仁之本与？”
+
 
 \fontspec{NSimSun}
 \section{新宋体}
